--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
     "mongoose": "^5.1.2",
+    "nodemailer": "^4.6.8",
     "nodemon": "^1.17.5",
     "uuid": "^3.2.1"
   },
